tests/expected_invalid_parse_missing_type_argument_comma.diag.out
<input>:3:22: error: expected ',' between type arguments
        values: Map<Text Int>,
                         ^^^
